src/objects/Coupon_Description__c.object
<CustomObject>
    <fields>
        <fullName>Autordm_Type__c</fullName>
        <label>Autordm Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bankable__c</fullName>
        <label>Bankable</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_coupon_limit__c</fullName>
        <label>Cash coupon limit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coupon_Id__c</fullName>
        <label>Coupon Id</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coupon_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coupon Type</label>
        <referenceTo>Coupon_Type__c</referenceTo>
        <relationshipLabel>Coupon Descriptions</relationshipLabel>
        <relationshipName>Coupon_Descriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Defl_value__c</fullName>
        <label>Defl value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_code__c</fullName>
        <label>Interest code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logon__c</fullName>
        <label>Logon</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_tier_card__c</fullName>
        <label>Promo tier card</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quality_code__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reel_rerd_type__c</fullName>
        <label>Reel rerd type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sds_coupon_type__c</fullName>
        <label>Sds coupon type</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Variable__c</fullName>
        <label>Variable</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cashless__c</fullName>
        <label>Cashless</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Coupon Description</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CD-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coupon Descriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>